// Vitest Snapshot v1

exports[`Dot Menu component > Mount DotMenu component with Standard width 1`] = `
<div
  class="hover:bg-app-hover rounded"
>
  <button
    aria-controls="headlessui-menu-items-6"
    aria-expanded="true"
    aria-haspopup="true"
    id="headlessui-menu-button-4"
    type="button"
  >
    <div
      class="flex items-center justify-center cursor-pointer h-10 w-7"
    >
      <svg
        class="w-4 text-app-dots"
        fill="none"
        viewBox="0 0 12 12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm4.5 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm3 1.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM3 6a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm4.5 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm3 1.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm-9 4.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM6 12a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm6-1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <transition-stub>
    <div
      aria-labelledby="headlessui-menu-button-4"
      class="origin-top-right absolute left-2 top-[65px] w-60 rounded-md shadow-lg bg-dropdown-background ring-1 ring-black ring-opacity-5 focus:outline-none divide-y divide-dropdown-divider overflow-hidden"
      id="headlessui-menu-items-6"
      role="menu"
      tabindex="0"
    >
      
      <div
        data-v-21d577c7=""
        role="none"
      >
        
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <svg
                class="w-5 h-5 text-dropdown-icon"
                data-v-21d577c7=""
                role="none"
                viewBox="0 0 19 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                  role="none"
                >
                  <path
                    d="M5.32 7.725c-.05.26-.185.494-.381.66-.196.164-.441.25-.691.241l-.072-.001c-1.17 0-2.117 1.007-2.117 2.25s.948 2.25 2.117 2.25h10.155l.095-.007c1.372-.103 2.456-1.32 2.456-2.806 0-1.53-1.15-2.775-2.582-2.811a1.016 1.016 0 0 1-.566-.19c-.167-.12-.299-.288-.38-.485-.654-1.592-2.148-2.701-3.883-2.701-2.049 0-3.76 1.546-4.151 3.6Zm9.18 6.515v.01H4.176C2.422 14.25 1 12.739 1 10.875S2.422 7.5 4.176 7.5c.036 0 .071 0 .106.002C4.772 4.933 6.909 3 9.471 3c2.17 0 4.037 1.389 4.854 3.376 2.005.05 3.616 1.794 3.616 3.936 0 2.08-1.518 3.784-3.441 3.928Z"
                    role="none"
                  />
                  <!--v-if-->
                  <!--v-if-->
                </g>
              </svg>
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center py-1"
              data-v-21d577c7=""
              role="none"
            >
              Plesk360 
              <!--v-if-->
            </a>
          </div>
        </div>
        
      </div>
      <div
        data-v-21d577c7=""
        role="none"
      >
        
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <div
              class="text-[10px] uppercase pt-2 font-semibold tracking-[1px] text-dropdown-info"
              data-v-21d577c7=""
              role="none"
            >
              Service in Plesk360
            </div>
            <!--v-if-->
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <svg
                class="w-5 h-5 text-dropdown-icon"
                data-v-21d577c7=""
                role="none"
                viewBox="0 0 19 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                  role="none"
                >
                  <!--v-if-->
                  <!--v-if-->
                  <path
                    d="M1.31 1.33c-.198.21-.31.497-.31.795V12.25c0 .298.112.585.31.796.199.21.468.329.749.329h5.823v2.25H5.765c-.14 0-.275.06-.375.165a.58.58 0 0 0-.155.398c0 .149.056.292.155.397.1.106.234.165.375.165h7.412c.14 0 .274-.06.374-.165a.58.58 0 0 0 .155-.398.58.58 0 0 0-.155-.397.514.514 0 0 0-.374-.165h-2.118v-2.25h5.823c.281 0 .55-.118.75-.33.198-.21.31-.497.31-.795V2.125c0-.298-.112-.585-.31-.796a1.028 1.028 0 0 0-.75-.329H2.06c-.281 0-.55.119-.749.33Zm15.572.795H2.06V12.25h14.823V2.125ZM10 13.375v2.25H8.941v-2.25H10ZM4.332 6.79a.58.58 0 0 0-.156.397v3.938h1.06V7.187a.58.58 0 0 0-.156-.397.514.514 0 0 0-.374-.165c-.14 0-.275.06-.374.165Zm6.353 1.125a.58.58 0 0 0-.156.397v2.813h1.06V8.312a.58.58 0 0 0-.156-.397.514.514 0 0 0-.374-.165c-.14 0-.275.06-.374.165ZM7.508 4.54a.58.58 0 0 0-.155.397v6.188h1.059V4.937a.58.58 0 0 0-.155-.397.514.514 0 0 0-.375-.165c-.14 0-.275.06-.374.165Zm6.353 1.125a.581.581 0 0 0-.155.397v5.063h1.059V6.062a.58.58 0 0 0-.155-.397.514.514 0 0 0-.375-.165c-.14 0-.275.06-.374.165Z"
                    role="none"
                  />
                </g>
              </svg>
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center py-1"
              data-v-21d577c7=""
              role="none"
            >
              Monitoring 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Dashboard 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Servers 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Websites 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Full Site Check 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Metrics 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Pages 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Alerts 
              <!--v-if-->
            </a>
          </div>
        </div>
        
      </div>
      <div
        data-v-21d577c7=""
        role="none"
      >
        
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <svg
                class="w-5 h-5 text-dropdown-icon"
                data-v-21d577c7=""
                role="none"
                viewBox="0 0 19 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                  role="none"
                >
                  <!--v-if-->
                  <path
                    d="M18 8.785a7.772 7.772 0 0 1-3.646 6.582 7.782 7.782 0 0 1-7.516.416l-3.465 1.161a1.038 1.038 0 0 1-1.317-1.316l1.162-3.463a7.772 7.772 0 0 1 5.267-10.97 7.785 7.785 0 0 1 8.747 4.212A7.772 7.772 0 0 1 18 8.785ZM9.97 4.918a.277.277 0 0 1 .499 0l.985 2a.292.292 0 0 0 .208.156l2.21.311a.284.284 0 0 1 .155.477l-1.598 1.555a.28.28 0 0 0-.083.25l.384 2.197a.286.286 0 0 1-.415.29l-1.97-1.036a.28.28 0 0 0-.25 0l-1.97 1.036a.28.28 0 0 1-.416-.29l.384-2.198a.28.28 0 0 0-.083-.249L6.413 7.862a.28.28 0 0 1 .155-.466l2.21-.322a.28.28 0 0 0 .207-.155l.986-2.001Z"
                    role="none"
                  />
                  <!--v-if-->
                </g>
              </svg>
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center py-1"
              data-v-21d577c7=""
              role="none"
            >
              Your feedback 
              <!--v-if-->
            </a>
          </div>
        </div>
        
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`Dot Menu component > Mount DotMenu component with smaller width 1`] = `
<div
  class="hover:bg-app-hover rounded"
>
  <button
    aria-controls="headlessui-menu-items-9"
    aria-expanded="true"
    aria-haspopup="true"
    id="headlessui-menu-button-7"
    type="button"
  >
    <div
      class="flex items-center justify-center cursor-pointer h-10 w-7"
    >
      <svg
        class="w-4 text-app-dots"
        fill="none"
        viewBox="0 0 12 12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm4.5 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm3 1.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM3 6a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm4.5 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm3 1.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm-9 4.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM6 12a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm6-1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <transition-stub>
    <div
      aria-labelledby="headlessui-menu-button-7"
      class="origin-top-right absolute left-2 top-[65px] w-60 rounded-md shadow-lg bg-dropdown-background ring-1 ring-black ring-opacity-5 focus:outline-none divide-y divide-dropdown-divider overflow-hidden"
      id="headlessui-menu-items-9"
      role="menu"
      tabindex="0"
    >
      
      <div
        data-v-21d577c7=""
        role="none"
      >
        
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <svg
                class="w-5 h-5 text-dropdown-icon"
                data-v-21d577c7=""
                role="none"
                viewBox="0 0 19 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                  role="none"
                >
                  <path
                    d="M5.32 7.725c-.05.26-.185.494-.381.66-.196.164-.441.25-.691.241l-.072-.001c-1.17 0-2.117 1.007-2.117 2.25s.948 2.25 2.117 2.25h10.155l.095-.007c1.372-.103 2.456-1.32 2.456-2.806 0-1.53-1.15-2.775-2.582-2.811a1.016 1.016 0 0 1-.566-.19c-.167-.12-.299-.288-.38-.485-.654-1.592-2.148-2.701-3.883-2.701-2.049 0-3.76 1.546-4.151 3.6Zm9.18 6.515v.01H4.176C2.422 14.25 1 12.739 1 10.875S2.422 7.5 4.176 7.5c.036 0 .071 0 .106.002C4.772 4.933 6.909 3 9.471 3c2.17 0 4.037 1.389 4.854 3.376 2.005.05 3.616 1.794 3.616 3.936 0 2.08-1.518 3.784-3.441 3.928Z"
                    role="none"
                  />
                  <!--v-if-->
                  <!--v-if-->
                </g>
              </svg>
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center py-1"
              data-v-21d577c7=""
              role="none"
            >
              Plesk360 
              <!--v-if-->
            </a>
          </div>
        </div>
        
      </div>
      <div
        data-v-21d577c7=""
        role="none"
      >
        
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <div
              class="text-[10px] uppercase pt-2 font-semibold tracking-[1px] text-dropdown-info"
              data-v-21d577c7=""
              role="none"
            >
              Service in Plesk360
            </div>
            <!--v-if-->
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <svg
                class="w-5 h-5 text-dropdown-icon"
                data-v-21d577c7=""
                role="none"
                viewBox="0 0 19 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                  role="none"
                >
                  <!--v-if-->
                  <!--v-if-->
                  <path
                    d="M1.31 1.33c-.198.21-.31.497-.31.795V12.25c0 .298.112.585.31.796.199.21.468.329.749.329h5.823v2.25H5.765c-.14 0-.275.06-.375.165a.58.58 0 0 0-.155.398c0 .149.056.292.155.397.1.106.234.165.375.165h7.412c.14 0 .274-.06.374-.165a.58.58 0 0 0 .155-.398.58.58 0 0 0-.155-.397.514.514 0 0 0-.374-.165h-2.118v-2.25h5.823c.281 0 .55-.118.75-.33.198-.21.31-.497.31-.795V2.125c0-.298-.112-.585-.31-.796a1.028 1.028 0 0 0-.75-.329H2.06c-.281 0-.55.119-.749.33Zm15.572.795H2.06V12.25h14.823V2.125ZM10 13.375v2.25H8.941v-2.25H10ZM4.332 6.79a.58.58 0 0 0-.156.397v3.938h1.06V7.187a.58.58 0 0 0-.156-.397.514.514 0 0 0-.374-.165c-.14 0-.275.06-.374.165Zm6.353 1.125a.58.58 0 0 0-.156.397v2.813h1.06V8.312a.58.58 0 0 0-.156-.397.514.514 0 0 0-.374-.165c-.14 0-.275.06-.374.165ZM7.508 4.54a.58.58 0 0 0-.155.397v6.188h1.059V4.937a.58.58 0 0 0-.155-.397.514.514 0 0 0-.375-.165c-.14 0-.275.06-.374.165Zm6.353 1.125a.581.581 0 0 0-.155.397v5.063h1.059V6.062a.58.58 0 0 0-.155-.397.514.514 0 0 0-.375-.165c-.14 0-.275.06-.374.165Z"
                    role="none"
                  />
                </g>
              </svg>
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center py-1"
              data-v-21d577c7=""
              role="none"
            >
              Monitoring 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Dashboard 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Servers 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Websites 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Full Site Check 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Metrics 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Pages 
              <!--v-if-->
            </a>
          </div>
        </div>
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer hidden"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <!--v-if-->
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center dotNav__sub"
              data-v-21d577c7=""
              role="none"
            >
              Alerts 
              <!--v-if-->
            </a>
          </div>
        </div>
        
      </div>
      <div
        data-v-21d577c7=""
        role="none"
      >
        
        <div
          class="flex px-2 text-dropdown-text transition ease-in-out duration-150 py-1 hover:bg-dropdown-hoverBackground hover:text-dropdown-hoverText cursor-pointer"
          data-v-21d577c7=""
          role="none"
        >
          <div
            class="flex items-center gap-3 leading-loose w-full px-2"
            data-v-21d577c7=""
            role="none"
          >
            <div
              class="w-4 flex-shrink-0"
              data-v-21d577c7=""
              role="none"
            >
              <svg
                class="w-5 h-5 text-dropdown-icon"
                data-v-21d577c7=""
                role="none"
                viewBox="0 0 19 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                  role="none"
                >
                  <!--v-if-->
                  <path
                    d="M18 8.785a7.772 7.772 0 0 1-3.646 6.582 7.782 7.782 0 0 1-7.516.416l-3.465 1.161a1.038 1.038 0 0 1-1.317-1.316l1.162-3.463a7.772 7.772 0 0 1 5.267-10.97 7.785 7.785 0 0 1 8.747 4.212A7.772 7.772 0 0 1 18 8.785ZM9.97 4.918a.277.277 0 0 1 .499 0l.985 2a.292.292 0 0 0 .208.156l2.21.311a.284.284 0 0 1 .155.477l-1.598 1.555a.28.28 0 0 0-.083.25l.384 2.197a.286.286 0 0 1-.415.29l-1.97-1.036a.28.28 0 0 0-.25 0l-1.97 1.036a.28.28 0 0 1-.416-.29l.384-2.198a.28.28 0 0 0-.083-.249L6.413 7.862a.28.28 0 0 1 .155-.466l2.21-.322a.28.28 0 0 0 .207-.155l.986-2.001Z"
                    role="none"
                  />
                  <!--v-if-->
                </g>
              </svg>
            </div>
            <!--v-if-->
            <a
              class="text-sm flex-auto flex items-center py-1"
              data-v-21d577c7=""
              role="none"
            >
              Your feedback 
              <!--v-if-->
            </a>
          </div>
        </div>
        
      </div>
      
    </div>
  </transition-stub>
</div>
`;
